salesforce_sfdx/main/default/objects/OSFMX_ConsumosSector__c/OSFMX_ConsumosSector__c.object-meta.xml
<CustomObject>
    <description>Tabla de consumos de sector</description>
    <label>OSFMX_ConsumosSector</label>
    <nameField>
        <label>OSFMX_ConsumosSector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSFMX_ConsumosSectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>