salesforce_sfdx/main/default/objects/OSFMX_ConsumosSector__c/fields/Desviacion_Estandar_por_Sector__c.field-meta.xml
<CustomField>
    <fullName>Desviacion_Estandar_por_Sector__c</fullName>
    <label>Desviacion Estandar por Sector</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>