salesforce_sfdx/main/default/objects/OSFMX_ConsumosSector__c/fields/M10__c.field-meta.xml
<CustomField>
    <fullName>M10__c</fullName>
    <label>M10</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>