salesforce_sfdx/main/default/objects/OSFMX_ConsumosSector__c/fields/M11__c.field-meta.xml
<CustomField>
    <fullName>M11__c</fullName>
    <label>M11</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>