salesforce_sfdx/main/default/objects/OSFMX_ConsumosSector__c/fields/M12__c.field-meta.xml
<CustomField>
    <fullName>M12__c</fullName>
    <label>M12</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>