salesforce_sfdx/main/default/objects/OSFMX_ConsumosSector__c/fields/Porcentaje_Volatibilidad__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Volatibilidad__c</fullName>
    <label>Porcentaje Volatibilidad</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>