salesforce_sfdx/main/default/objects/OSFMX_ConsumosSector__c/fields/Volatibilidad__c.field-meta.xml
<CustomField>
    <fullName>Volatibilidad__c</fullName>
    <label>Volatilidad</label>
    <length>15</length>
    <type>Text</type>
</CustomField>